# SpiderML

./: CMakeLists.txt  LICENSE  README.md  training_stats2.csv
data_analyse/: training_stats.csv  visualization.ipynb
src/: main.cpp
src/agent/: PopulationManager.cpp  PopulationManager.hpp  Spider.cpp  Spider.hpp
src/brain/: NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.hpp  Synapse.hpp
src/evolution/: NeatConfig.hpp
src/genes/: ConnectionGene.hpp  Genome.cpp  Genome.hpp  InnovationManager.cpp  InnovationManager.hpp  NodeGene.hpp  Population.cpp  Population.hpp
